Added doxygen comments and fixed some bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,15 @@ cmake_minimum_required(VERSION 3.5)
 
 set (CMAKE_CXX_STANDARD 11)
 
-project(BlockStorage)
+project(block_storage)
 
 set(SOURCES
     src/main.cpp
-    src/storage_functions.cpp
 )
 
-add_executable(BlockStorage ${SOURCES})
+add_executable(block_storage ${SOURCES})
 
-target_include_directories(BlockStorage
+target_include_directories(block_storage
     PRIVATE
         ${PROJECT_SOURCE_DIR}/include
 )
