commit all my work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,17 @@ project(block_storage)
 
 set(SOURCES
     src/main.cpp
-    src/workload_generator.cpp
     src/disk_log.cpp
     src/blkstorage.cpp
     src/data_base_disk.cpp
+    src/pmem_log.cpp
+    src/data_base_pmem.cpp
+    src/test.cpp
 )
 
 add_executable(block_storage ${SOURCES})
+
+target_link_libraries(block_storage -lpmemlog)
 
 target_include_directories(block_storage
     PRIVATE
